# IgLM

./: .gitignore  IgLM.ipynb  LICENSE.md  MANIFEST.in  README.md  environment.yml  evaluate.py  full_generation.py  infill.py  plot_embeddings.py  plot_scan.py  scan_evaluate.py  setup.cfg  util.py
analysis/: plot_embeddings.py  plot_scan.py  scan_evaluate.py
data/antibodies/1jpt/: 1jpt.fasta
data/antibodies/4nzu/: 4nzu.fasta
data/antibodies/test/: 1jpt_heavy.fasta
data/designed_libraries/1jpt/baseline/: camsol_out.txt  metrics.h5  oasis_input.fasta  seqs.fasta
data/designed_libraries/1jpt/designed/: camsol_out.txt  metrics.h5  oasis_input.fasta  seqs.fasta
data/designed_libraries/1jpt/grafted_oas/: camsol_out.txt  metrics.h5  oasis_input.fasta  seqs.fasta
data/designed_libraries/1jpt/grafted_oas/immunogenicity/: wt_netMHCIIpan_out.tsv
data/designed_libraries/4nzu/baseline/: camsol_out.txt  metrics.h5  oasis_input.fasta  seqs.fasta
data/designed_libraries/4nzu/designed/: camsol_out.txt  metrics.h5  oasis_input.fasta  seqs.fasta
data/designed_libraries/4nzu/grafted_oas/: camsol_out.txt  metrics.h5  oasis_input.fasta  seqs.fasta
data/designed_libraries/4nzu/grafted_oas/immunogenicity/: wt_netMHCIIpan_out.tsv
iglm/: DataCollatorForIgLM.py  __init__.py  infill_utils.py
iglm/cli/: evaluate.py  full_generation.py  infill.py
iglm/model/: IgLM.py  __init__.py  tokens.py  utils.py
iglm/trained_models/: vocab.txt
iglm/trained_models/IgLM/: config.json
iglm/trained_models/IgLM-S/: config.json
iglm/utils/: general.py  seed.py
