[metadata]
name = iglm
version = 0.0.2
long-description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    biopython>=1.79
    numpy>=1.21.2
    tokenizers>=0.10.2
    torch>=1.11.0
    tqdm>=4.64.0
    transformers>=4.6.1
include_package_data = True

[options.entry_points]
console_scripts =
    iglm_infill = iglm.cli.infill:main
    iglm_generate = iglm.cli.full_generation:main
    iglm_evaluate = iglm.cli.evaluate:main
